--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   mobx: ^2.0.7
   flutter_mobx: ^2.0.5
   email_validator: ^2.0.1
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
