--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_mobx: ^2.0.5
   email_validator: ^2.0.1
   get_it: ^7.2.0
+  hive: ^2.1.0
 
 dev_dependencies:
   flutter_test:
