--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,10 @@ dependencies:
   get_it: ^7.2.0
   hive: ^2.1.0
   hive_flutter: ^1.1.0
-  drag_and_drop_lists: ^0.3.2+2
+  drag_and_drop_lists:
+    git:
+      url: https://github.com/EmanoelV/DragAndDropLists
+
 
 dev_dependencies:
   flutter_test:
