--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
     git:
       url: https://github.com/EmanoelV/DragAndDropLists
 
+  confetti: ^0.6.0
+
 
 dev_dependencies:
   flutter_test:
