add a splash screen and a icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,23 @@ dependencies:
 
   confetti: ^0.6.0
 
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^2.1.1
+
+flutter_icons:
+  image_path: "assets/images/icon.png"
+  ios: true
+  remove_alpha_ios: true
+  android: "launcher_icon"
+  adaptative_icon_background: "#FFFFFFFF"
+  adaptative_icon_forenground: "assets/images/adaptative.png"
+
+flutter_native_splash:
+  color: "#FFFFFFFF"
+  image: "assets/images/splash.png"
+  android: true
+  ios: true
+
 
 dev_dependencies:
   flutter_test:
@@ -73,8 +90,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/ic_launcher.png
+    - assets/images/adaptative.png
+    - assets/images/splash.png
+    
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
