--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^7.2.0
   hive: ^2.1.0
   hive_flutter: ^1.1.0
+  cloud_firestore: ^3.1.15
   drag_and_drop_lists:
     git:
       url: https://github.com/Gabriel-S-Souza/DragAndDropLists
