--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   hive: ^2.1.0
   hive_flutter: ^1.1.0
   cloud_firestore: ^3.1.15
+  firebase_auth: ^3.3.18
+  firebase_core: ^1.17.0
+  firebase_database: ^9.0.14
   drag_and_drop_lists:
     git:
       url: https://github.com/Gabriel-S-Souza/DragAndDropLists
