--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.2 <3.0.0"
+  sdk: ">2.16.2 <=3.0.1"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -43,12 +43,13 @@ dependencies:
   cloud_firestore: ^3.1.15
   firebase_auth: ^3.3.18
   firebase_core: ^1.17.0
-  firebase_database: ^9.0.14
+  # firebase_database: ^9.0.14
   drag_and_drop_lists:
     git:
       url: https://github.com/Gabriel-S-Souza/DragAndDropLists
 
   confetti: ^0.6.0
+  image_picker: ^0.8.5+3
 
   flutter_launcher_icons: ^0.9.2
   flutter_native_splash: ^2.1.1
