--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
 
   confetti: ^0.6.0
   image_picker: ^0.8.5+3
+  auto_size_text: ^3.0.0
 
   flutter_launcher_icons: ^0.9.2
   flutter_native_splash: ^2.1.1
