--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   mobx: ^2.0.7
   flutter_mobx: ^2.0.5
   email_validator: ^2.0.1
+  path_provider: ^2.0.11
   get_it: ^7.2.0
   hive: ^2.1.0
   hive_flutter: ^1.1.0
